2003-12-19  bulia byak <bulia@dr.com>

	* src/sp-item.cpp src/sp-item.h: new sp_item_get_arenaitem (by mental)

	* src/main.cpp src/file.cpp src/file.h src/dialogs/export.cpp: export UI improvements
	(patches from the tracker)

	* src/select-context.cpp: shift-click selection is now in root_handler, uses
	sp_document_item_at_point(); changed shift-rubberband selection to always select
	instead of toggle

	* src/document.h src/document.cpp: wrong order of arguments in overlap() fixed; new:
	sp_document_item_at_point(), uses sp_item_get_arenaitem

	* src/Makefile.am: fix: ps.c -> ps.cpp

	* src/nodepath.cpp: dragging node with ctrl+alt restricts it to the directions of its
	handles and their perpendiculars

2003-12-19  MenTaLguY <mental@rydia.net>

	* Fixed most shortcut key regressions from the SPAction rework

	* Renamed the Inkscape class (struct really) to Inkscape::Application; we can now
	  use the Inkscape namespace.

	* src/toolbox.cpp, src/helper/action.cpp, src/helper/action.h:
	  SPActions now know their desktop, and toolbar buttons get it assigned correctly

	* src/desktop.cpp, src/interface.h, src/interface.cpp, src/verbs.cpp:
	  Verbs now use the desktop associated with an action rather than SP_ACTIVE_DESKTOP

2003-12-18  Jon A. Cruz <jon@joncruz.org>

	* fix for 859133; Reduced number of generated events.

2003-12-18  Jon A. Cruz <jon@joncruz.org>

	* src/widgets/sp-color-gtkselector.cpp: fix for 859131; Changed descriptive name of GTK+
	selector.

2003-12-18  MenTaLguY <mental@rydia.net>

	* First steps towards making actions per-view

2003-12-17  Jon A. Cruz <jon@joncruz.org>

	* src/widgets/sp-color-notebook.cpp: fix for 859128; changed selectors to grow when
	given more space.

2003-12-17  Jon A. Cruz <jon@joncruz.org>

	* Converted color selectors to C++ classes.

2003-12-18  Nathan Hurst <njh@csse.monash.edu.au>

	* Merged NRPointF and D, similarly Matrix and Rect.

2003-12-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
